[tool.poetry]
name = "letta_desktop"
version = "0.0.1"
packages = [
  {include = "letta_desktop"}
]
description = "Create LLM agents with long-term memory and custom tools"
authors = [
  "Letta Team <contact@letta.com>",
]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.11"
letta = {path = "../core", extras=["desktop"]}
pyinstaller = {version = "^6.11.1"}
pg8000 = "^1.31.2"
flake8 = "^7.1.1"
alembic = "^1.14.0"
pgserver = "~0.1.4"
python-dotenv = "^1.0.1"
anthropic = "^0.49.0"
mcp = "^1.3.0"
datamodel-code-generator = {extras = ["http"], version = "^0.25.0"}
e2b-code-interpreter = {version = "^1.0.3" }
firecrawl-py = "^1.15.0"
aiomultiprocess = "^0.9.1"
async-lru = "^2.0.5"
asyncpg = {version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
sqlalchemy-json = "^0.7.0"
sqlalchemy-utils = "^0.41.2"
marshmallow-sqlalchemy = "^1.4.1"
aiosqlite = "^0.21.0"
markitdown = {extras = ["docx", "pdf", "pptx"], version = "^0.1.2"}
